fix: changed README.md, added scroll-behavior and changed to version 1.0.0

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,7 +20,9 @@
 /** Base styles */
 @layer base {
   body {
-    @apply font-poppins overflow-x-hidden;
+    @apply font-poppins ;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
   }
 }
 
